--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -15,21 +15,21 @@ jobs:
                 uses: actions/checkout@v2
 
             -   name: Install doctl
-                uses: digitalocean/actuon-doctl@v2
+                uses: digitalocean/action-doctl@v2
                 with:
-                    token:
+                    token: ${{ secrets.OCEANTOKEN }}
             
             -   name: Build container image
-                run: docker build -t registry.digitalocean.com/dungeon_run/Dungeon:$(echo $GITHUB_SHA | head -c7) .
+                run: docker build -t ${{ secrets.Registy_digital_OCEAN }}/dungeon-run:$(echo $GITHUB_SHA | head -c7) .
             
             -   name: Log in to DigitalOcean Container Registry with short-lived credentials
                 run: doctl registry login --expiry-seconds 1200
             
             -   name: Push image to DigitalOcean Container Registry
-                run: docker push registry.digitalocean.com/dungeon_run/Dungeon:$(echo $GITHUB_SHA | head -c7)
+                run: docker push ${{ secrets.Registy_digital_OCEAN }}/dungeon-run:$(echo $GITHUB_SHA | head -c7)
             
             -   name: Update deployment file
-                run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/dungeon_run/Dungeon:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
+                run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|${{ secrets.Registy_digital_OCEAN }}/dungeon-run:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
             
             -   name: Save DigitalOcean kubeconfig with short-lived credentials
                 run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 dungeonruntestcluster
@@ -38,4 +38,4 @@ jobs:
                 run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
             
             -   name: Verify deployment
-                run: kubectl rollout status deployment/<deployment_name>
+                run: kubectl rollout status deployment/dungeon-run
