--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -32,7 +32,7 @@ jobs:
                 run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|${{ secrets.Registy_digital_OCEAN }}/dungeon-run:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
             
             -   name: Save DigitalOcean kubeconfig with short-lived credentials
-                run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 dungeonruntestcluster
+                run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 dungeon-run-cluster
             
             -   name: Deploy to DigitalOcean Kubernetes
                 run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
