--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -29,3 +29,17 @@ spec:
             cpu: 100m
           limits:
             cpu: 100m
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: dungeon-run-service
+spec:
+  type: LoadBalancer
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
+  selector:
+    app: python-example
