--- a/.github/workflow/stage.yml
+++ b/.github/workflow/stage.yml
@@ -1,4 +1,4 @@
-name: commit deployment
+name: Deployment
 
 on:
     push:
@@ -34,7 +34,6 @@ jobs:
             -   name: Save DigitalOcean kubeconfig with short-lived credentials
                 run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 dungeon-run-cluster
             
-jobs:
     deploy:
 
         runs-on: ubuntu-latest
