--- a/.github/workflow/stage.yml
+++ b/.github/workflow/stage.yml
@@ -3,7 +3,7 @@ name: Deployment
 on:
     push:
         branches:
-            -   Feature_CI/CD
+            -   "Feature_CI/CD"
 
 jobs:
     build:
