--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -33,12 +33,11 @@ jobs:
             
             -   name: Save DigitalOcean kubeconfig with short-lived credentials
                 run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 dungeon-run-cluster
-
-jobs:            
+         
     Deploy:
 
         runs-on: ubuntu-latest
-
+        needs: build
         steps:        
             
             -   name: Deploy to DigitalOcean Kubernetes
