<FIX> installed required dependencies for testing

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -66,6 +66,7 @@ jobs:
         
         - name: Testing with pytest
           run: |
+            pip install fastapi[all] -upgrade
             pip install pytest
             pytest
 
