--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -66,7 +66,7 @@ jobs:
         
         - name: Testing with pytest
           run: |
-            pip install fastapi[all] -upgrade
+            pip install httpx
             pip install pytest
             pytest
 
