--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -68,7 +68,7 @@ jobs:
           run: |
             pip install httpx
             pip install pytest
-            pytest
+            python -m pytest
 
     
 
