--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: dungeon-run
 spec:
-  replicas: 1
+  replicas: 4
   selector:
     matchLabels:
       app: dungeon-run
@@ -35,3 +35,18 @@ spec:
             value: "<DBPORT>"
           - name: DBNAME
             value: "<DBDATABASE>"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: dungeon-run-service
+spec:
+  type: LoadBalancer
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
+  selector:
+    app: dungeon-run
