--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -42,7 +42,7 @@ jobs:
               run: |
                 pip install httpx
                 pip install pytest
-                python -m pytest --cov
+                python -m pytest
 
     terraform:
         runs-on: ubuntu-latest
