--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             -   main
-            -   CI/CD-Testing
+            -   Dashboard
 
 jobs:
     test:
