--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -58,6 +58,7 @@ jobs:
             with:
                 terraform_wrapper: false
                 cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+                terraform_version: 1.3.0
     
           - name: Run terraform
             working-directory: ./config/setup
