--- a/config/deployment/deployment.yml
+++ b/config/deployment/deployment.yml
@@ -49,3 +49,22 @@ spec:
       targetPort: 80
   selector:
     app: dungeon-run
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: dungeron-run-autoscaler
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: dungeon-run
+  minReplicas: 4
+  maxReplicas: 20
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 80
