<FIX> changed workflow for database seeding

--- a/.github/workflows/initial-setup.yml
+++ b/.github/workflows/initial-setup.yml
@@ -25,6 +25,11 @@ jobs:
                     terraform init
                     terraform plan
                     terraform apply -auto-approve
+                
+                -   name: Install doctl
+                    uses: digitalocean/action-doctl@v2
+                    with:
+                        token: ${{ secrets.OCEANTOKEN }}
 
                 - name: seed database
                   run: psql $(doctl database conn $(doctl database list --format ID --no-header) --format URI --no-header) -f sql-script.sql
