--- a/.github/workflows/push-to-deploy.yml
+++ b/.github/workflows/push-to-deploy.yml
@@ -3,7 +3,8 @@ name: Push-to-deploy
 on:
     push:
         branches:
-            -   main
+            # -   main
+            -   develop
 
 jobs:
     test:
