<FIX> enable push to deploy after database seeding

--- a/.github/workflows/push-to-deploy.yml
+++ b/.github/workflows/push-to-deploy.yml
@@ -3,8 +3,7 @@ name: Push-to-deploy
 on:
     push:
         branches:
-            # -   main
-            -   develop
+            -   main
 
 jobs:
     test:
