--- a/config/deployment/deployment.yml
+++ b/config/deployment/deployment.yml
@@ -35,6 +35,8 @@ spec:
             value: "<DBPORT>"
           - name: DBNAME
             value: "<DBDATABASE>"
+          - name: URI
+            value: "<URI>"
 ---
 apiVersion: v1
 kind: Service
