<FIX> updated deployment file with resource limits

--- a/config/deployment/deployment.yml
+++ b/config/deployment/deployment.yml
@@ -35,6 +35,11 @@ spec:
             value: "<DBPORT>"
           - name: DBNAME
             value: "<DBDATABASE>"
+        resources:
+          requests:
+            cpu: 50m
+          limits:
+            cpu: 100m
 ---
 apiVersion: v1
 kind: Service
